--- a/package.json
+++ b/package.json
@@ -11,12 +11,12 @@
   "devDependencies": {
     "copy-webpack-plugin": "^5.1.1",
     "eslint": "^6.8.0",
-    "karma": "^4.4.1",
+    "karma": "^5.2.3",
     "karma-chrome-launcher": "^3.1.0",
     "karma-coverage": "^2.0.1",
     "karma-qunit": "^4.0.0",
-    "karma-webpack": "^4.0.2",
     "karma-sinon-chrome": "^0.2.0",
+    "karma-webpack": "^4.0.2",
     "puppeteer": "^2.1.0",
     "qunit": "^2.9.3",
     "sinon-chrome": "^3.0.1",
@@ -26,12 +26,12 @@
   "dependencies": {
     "babel-polyfill": "^6.26.0",
     "package.json": "^2.0.1",
-    "web-ext": "5.1.0",
-    "webextension-polyfill": "^0.6.0",
-    "webpack-cli": "^3.3.10",
     "pouchdb": "^7.2.1",
     "pouchdb-browser": "^7.2.1",
-    "uuid": "^3.4.0"
+    "uuid": "^8.3.0",
+    "web-ext": "^5.2.0",
+    "webextension-polyfill": "^0.6.0",
+    "webpack-cli": "^3.3.10"
   },
   "babel": {
     "presets": [
