--- a/package.json
+++ b/package.json
@@ -29,9 +29,10 @@
     "package.json": "^2.0.1",
     "pouchdb": "^7.2.1",
     "pouchdb-browser": "^7.2.1",
-    "uuid": "^8.3.0",
+    "uuid": "^8.3.2",
     "web-ext": "^5.2.0",
-    "webpack-cli": "^3.3.10"
+    "webpack-cli": "^3.3.10",
+    "uuid": "^8.3.2"
   },
   "babel": {
     "presets": [
