--- a/package.json
+++ b/package.json
@@ -31,8 +31,7 @@
     "pouchdb-browser": "^7.2.1",
     "uuid": "^8.3.2",
     "web-ext": "^5.2.0",
-    "webpack-cli": "^3.3.10",
-    "uuid": "^8.3.2"
+    "webpack-cli": "^3.3.10"
   },
   "babel": {
     "presets": [
