--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -14,5 +14,4 @@ jobs:
     - uses: actions/checkout@v1
     - run: npm install
     - run: npm run test
-    - run: npm run webpack
-    - run: npm run webext-build
+    - run: npm run build
