--- a/extension/manifest.json
+++ b/extension/manifest.json
@@ -3,10 +3,10 @@
   "manifest_version": 2,
   "name": "Collect bids",
   "description": "Collect prebidjs auctions outcomes",
-  "version": "1.0",
+  "version": "1.0.1a4",
   "browser_specific_settings": {
     "gecko": {
-      "id": "addon@example.com",
+      "id": "gabriele.modena@gmail.com",
       "strict_min_version": "42.0"
     }
   },
